--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         },
         "laravel": {
             "providers": [
-                "Justbetter\\JustBetterStarterKit\\ServiceProvider"
+                "JustBetter\\StatamicStarterKit\\ServiceProvider"
             ]
         }
     },
@@ -29,7 +29,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Justbetter\\JustBetterStarterKit\\": "src"
+            "JustBetter\\StatamicStarterKit\\": "src"
         }
     },
     "autoload-dev": {
