Added single button fieldset

--- a/export/resources/fieldsets/content.yaml
+++ b/export/resources/fieldsets/content.yaml
@@ -35,5 +35,4 @@ fields:
                     display: Buttons
                     fields:
                       -
-                        handle: buttons
-                        field: buttons.buttons
+                        import: buttons
