--- a/export/resources/fieldsets/buttons.yaml
+++ b/export/resources/fieldsets/buttons.yaml
@@ -24,30 +24,4 @@ fields:
                     display: Buttons
                     fields:
                       -
-                        handle: button_text
-                        field:
-                          type: text
-                          display: 'Button tekst'
-                          width: 50
-                      -
-                        handle: button_variant
-                        field:
-                          options:
-                            -
-                              key: primary
-                              value: 'Primair (Kleur)'
-                            -
-                              key: secondary
-                              value: 'Secundair (Kleur)'
-                            -
-                              key: outline
-                              value: 'Omlijnd (Outline)'
-                          default: primary
-                          type: select
-                          display: 'Button variant'
-                          width: 50
-                      -
-                        handle: button_link
-                        field:
-                          type: link
-                          display: 'Button link'
+                        import: button
