--- a/starter-kit.yaml
+++ b/starter-kit.yaml
@@ -19,6 +19,7 @@ export_paths:
   - database/migrations
   - package.json
   - vite.config.js
+  - lang/nl.json
 dependencies:
   justbetter/statamic-glide-directive: ^2.6
   rapidez/blade-directives: ^1.1
