Added forms conditionally based on type of project

--- a/export/resources/fieldsets/component_form.yaml
+++ b/export/resources/fieldsets/component_form.yaml
@@ -43,7 +43,7 @@ fields:
       display: 'Form - Submission text'
       localizable: true
   -
-    handle: form_redirect_url
+    handle: redirect_url
     field:
       collections:
         - pages
