--- a/starter-kit.yaml
+++ b/starter-kit.yaml
@@ -9,10 +9,13 @@ export_paths:
   - config/statamic/assets.php
   - config/statamic/eloquent-driver.php
   - config/statamic/system.php
+  - config/statamic/forms.php
   - resources/blueprints
   - resources/fieldsets
   - resources/css/site.css
+  - resources/js
   - resources/views/page.blade.php
+  - resources/views/page_builder.blade.php
   - resources/views/layouts/app.blade.php
   - resources/views/components
   - resources/sites.yaml
@@ -22,5 +25,6 @@ export_paths:
   - lang/nl.json
 dependencies:
   justbetter/statamic-glide-directive: ^2.6
+  rapidez/blade-components: ^1.11
   rapidez/blade-directives: ^1.1
   statamic/eloquent-driver: ^4.21
