Only show clear static cache for non super admins

--- a/starter-kit.yaml
+++ b/starter-kit.yaml
@@ -25,6 +25,7 @@ export_paths:
   - resources/views/mail
   - resources/views/page_builder
   - resources/views/layouts/seo
+  - resources/views/vendor/statamic
   - resources/sites.yaml
   - database/migrations
   - package.json
